changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

plugins/cfpython/cfpython_archetype.c, plugins/cfpython/cfpython_object.c,
  plugins/cfpython/cfpython_party.c, plugins/cfpython/cfpython_region.c,
  plugins/cfpython/cfpython_map.c,
  plugins/cfpython/include/cfpython_object_private.h,
  plugins/cfpython/include/cfpython_map_private.h,
  plugins/cfpython/include/cfpython_party_private.h,
  plugins/cfpython/include/cfpython_region_private.h,
  plugins/cfpython/include/cfpython_archetype_private.h: Implement the function
  tp_richcompare, since Python 3.x no longer uses tp_compare. tp_richcompare can
  also be used on Python 2.x. Also fix broken compare for players since
  tp_richcompare and tp_compare are not inherited if tp_hash is non-NULL.
  Also fix type definition head initialisation for Python 3.x.
plugins/cfpython/include/cfpython_region_private.h: Fix a typo that resulted in
  Python showing region type name as Crossfire.Party.
plugins/cfpython/cfpython_map.c: Fix several crash bugs related to swapped out
  maps.
Arvid Norlander 2009-02-19

server/c_range.c, server/init.c, server/shop.c, server/login.c, server/c_wiz.c:
  Fix some format string bugs (found using the GCC format __attribute__ for some
  crossfire functions).
server/c_wiz.c: Add some missing [fixed] to style_info output.
Arvid Norlander 2009-02-17

socket/item.c, socket/loop.c, socket/lowlevel.c, socket/metaserver.c: Fix some
  format string bugs (found using the GCC format __attribute__ for some
  crossfire functions).
Arvid Norlander 2009-02-17

common/map.c: Make a function static.